--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Note Taking App</title>
+  <title>Note Application</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 </head>
 <body>
   <h1>Note Taking App</h1>
 
   <form id="add-note-form">
     <h2>Add Note</h2>
-    <label for="title">Title:</label>
-    <input type="text" id="title" required>
-    <label for="content">Content:</label>
-    <textarea id="content" required></textarea>
-    <button type="submit">Add Note</button>
+    <label class="class1" id="id1" for="title">Title:</label>
+    <input type="text" id="title" placeholder="Add Title" required>
+    <label class="class1" for="content">Content:</label>
+    <div id="editor-container"></div>
+    <button class="curved-button" type="submit">Save 🖫</button>
   </form>
 
   <div id="notes-list">
